--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
     @apply bg-gradient-to-r from-customPurple-light to-customPurple-dark rounded font-medium;
   }
   .q-mark {
-    @apply font-madeTommyOutline font-medium absolute;
+    @apply font-madeTommyOutline font-medium relative;
   }
   .text-xsm {
     @apply text-[13px]
